// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source builtInVars.4gl 1`] = `
main

    let x, y = arg_val
    let x, y = arr_count
    let x, y = arr_cur
    let x, y = sqlca
    
end main
----------
MAIN

  LET x, y = arg_val
      LET x, y = arr_count
      LET x, y = arr_cur
      LET x, y = sqlca


END MAIN



`;

exports[`Source empty_main.4gl 1`] = `
main

end main
----------
MAIN


END MAIN



`;

exports[`Source globals.4gl 1`] = `
globals "abc.txt"

  globals
    DEFINE NOME CHAR(50) # abc
      DEFINE NOME CHAR(50) # abc
        DEFINE NOME CHAR(50) # abc

    DEFINE NOME2 CHAR(50) # abc
end globals




main
call xxxxx()



call xxxxx()



call xxxxx()



call xxxxx()
end main
----------
GLOBALS "abc.txt"

GLOBALS
  DEFINE NOME CHAR(50) # abc
  DEFINE NOME CHAR(50) # abc
  DEFINE NOME CHAR(50) # abc

  DEFINE NOME2 CHAR(50) # abc

END GLOBALS




MAIN
  CALL xxxxx()



  CALL xxxxx()



  CALL xxxxx()



  CALL xxxxx()

END MAIN



`;

exports[`Source strings.4gl 1`] = `
main

    let x, y = ''
    let x, y = 'ABC,DEF'
    let x, y = '"'
    let x, y = 'ABC\\'DEF'
    
end main

function f1()

    let x, y = ""
    let x, y = "ABC,DEF"
    let x, y = "'"
    let x, y = "ABC\\"DEF"
    
end function
----------
MAIN

  LET x, y = ''
      LET x, y = 'ABC,DEF'
      LET x, y = '"'
      LET x, y = 'ABC\\'DEF'


END MAIN

FUNCTION f1()

  LET x, y = ""
      LET x, y = "ABC,DEF"
      LET x, y = "'"
      LET x, y = "ABC\\"DEF"


END FUNCTION



`;
